Script created, sign-in/sign-up functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,14 @@ body{
     margin-top: 10%; 
 }
 
+.hide{
+    display: none;
+}
+
+.show{
+    display: inherit;   
+}
+
 /*SITE HEADER*/
 header{
     height: auto;
