Finished delete course, ajax implementation, assignment finished(?)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,11 @@ footer{
     background-color: #EEEEEE;   
 }
 
+.icon-delete{
+    width: 50px;
+    height: auto;
+}
+
 /*==============aside=================*/
 
 #sideInfo{
